Test/errors/err_jsx_unknown_tag.cb
// An element tag must name a type in scope.
extern int main()
{
    expect_error("is not a known type in scope");
    <Bogus />;
}
